Creating Buttons for movement
Created 2 buttons, one to move to the data screen and another to move back to the calculator screen. They both have on click listeners.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TSP7Calculator">
         <activity
+            android:name=".data"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
