Partial work for create an account
Partial work for create an account screen done. Crashes on attempt to go to the screen. May not be needed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".CreateAcc"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 <!--            <intent-filter>-->
